image size fault changes

--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -15,7 +15,7 @@
                                 <div class="single-blog-post featured-post">
                                     <div class="post-thumb">
                                         {% if item.image %}
-                                        <a href="{{ item.get_absolute_url }}"><img style="height:272px;" src="{{ item.image.url }}" alt=""></a>
+                                        <a href="{{ item.get_absolute_url }}"><img style="height:272px; width: 343px;" src="{{ item.image.url }}" alt=""></a>
                                     {% endif %}
                                     </div>
                                     <div class="post-data">
