--- a/lokswar/templates/base.html
+++ b/lokswar/templates/base.html
@@ -12,7 +12,7 @@
     <title>The Lokswar - Your online messenger</title>
     {% load static %}
     <!-- Favicon -->
-    <link rel="icon" href="{% static 'img/core-img/iconlok.png' %}">
+    <link rel="icon" href="{% static 'img/core-img/lokswar.ico' %}">
 
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
