bottom logo update

--- a/lokswar/templates/base.html
+++ b/lokswar/templates/base.html
@@ -271,7 +271,7 @@
                         <div class="footer-widget-area mt-80">
                             <!-- Footer Logo -->
                             <div class="footer-logo">
-                                <a href="{% url 'home:list' %}"><img style="margin-left:-20px;" src="{% static 'img/core-img/bottom_logo.png' %}" alt=""></a>
+                                <a href="{% url 'home:list' %}"><img style="margin-left:-20px;" src="{% static 'img/core-img/bottomlogo.png' %}" alt=""></a>
                             </div>
                             <!-- List -->
                             <ul class="list">
@@ -286,7 +286,7 @@
                     <div class="col-12 col-sm-6 col-lg-4">
                         <div class="footer-widget-area mt-80">
                             <!-- Title -->
-                            <h4 class="widget-title">Politics</h4>
+                            <h4 class="widget-title">News at Glance</h4>
                             <!-- List -->
                             <ul class="list">
                                 <li><a href="{% url 'home:movie' %}">मनोरंजन</a></li>
