--- a/lokswar/home/templates/detail.html
+++ b/lokswar/home/templates/detail.html
@@ -40,7 +40,7 @@
                                     </div>
                                     <div class="post-data">
                                         
-                                        <a href="#" class="post-title">
+                                        <a href="{{ get_absolute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
                                         <p>{{ item.date }}</p>
