--- a/lokswar/home/templates/detail.html
+++ b/lokswar/home/templates/detail.html
@@ -64,7 +64,7 @@
                                     <a href="{{ item.get_absolute_url }}"><img style="height:90px;" src="{{ item.image.url }}" alt=""></a>
                                 </div>
                                 <div class="post-data">
-                                    <a href="{% url 'home:news' %}" class="post-catagory">Finance</a>
+                                    <a href="{% url 'home:news' %}" class="post-catagory">न्यूज़ </a>
                                     <div class="post-meta">
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
@@ -82,7 +82,7 @@
                                     <a href="{{ item.get_absolute_url }}"><img style="height:90px;" src="{{ item.image.url }}" alt=""></a>
                                 </div>
                                 <div class="post-data">
-                                    <a href="{% url 'home:politics' %}" class="post-catagory">Politics</a>
+                                    <a href="{% url 'home:politics' %}" class="post-catagory">राजनीति </a>
                                     <div class="post-meta">
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
                                             <h6>Sed a elit euismod augue semper congue sit amet ac sapien.</h6>
@@ -100,7 +100,7 @@
                                     <a href="{{ item.get_absloute_url }}"><img style="height:90px;" src="{{ item.image.url }}" alt=""></a>
                                 </div>
                                 <div class="post-data">
-                                    <a href="{% url 'home:movie' %}" class="post-catagory">Health</a>
+                                    <a href="{% url 'home:movie' %}" class="post-catagory">मनोरंजन </a>
                                     <div class="post-meta">
                                         <a href="{{ item.get_absloute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
@@ -117,7 +117,7 @@
                                     <a href="{{ item.get_absloute_url }}"><img style="height:90px;" src="{{ item.image.url }}" alt=""></a>
                                 </div>
                                 <div class="post-data">
-                                    <a href="{% url 'home:sports' %}" class="post-catagory">Finance</a>
+                                    <a href="{% url 'home:sports' %}" class="post-catagory">खेल </a>
                                     <div class="post-meta">
                                         <a href="{{ item.get_absloute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
@@ -135,7 +135,7 @@
                                     <a href="{{ item.get_absloute_url }}"><img style="height:90px;" src="{{ item.image.url }}" alt=""></a>
                                 </div>
                                 <div class="post-data">
-                                    <a href="{% url 'home:election' %}" class="post-catagory">Travel</a>
+                                    <a href="{% url 'home:election' %}" class="post-catagory">चुनाव 2019</a>
                                     <div class="post-meta">
                                         <a href="{{ item.get_absloute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
@@ -153,7 +153,7 @@
                                     <a href="{{ item.get_absolute_url }}"><img style="height:90px;" src="{{ item.image.url }}" alt=""></a>
                                 </div>
                                 <div class="post-data">
-                                    <a href="{% url 'home:business' %}" class="post-catagory">Politics</a>
+                                    <a href="{% url 'home:business' %}" class="post-catagory">व्यापार </a>
                                     <div class="post-meta">
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
