--- a/lokswar/templates/base.html
+++ b/lokswar/templates/base.html
@@ -379,6 +379,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!-- Active js -->
     <script src="{% static 'js/active.js' %}"></script>
 
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132756512-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-132756512-1', { 'optimize_id': 'GTM-M565KSQ'});
+    </script>
+
 </body>
 
 </html>
