--- a/lokswar/templates/base.html
+++ b/lokswar/templates/base.html
@@ -379,6 +379,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!-- Active js -->
     <script src="{% static 'js/active.js' %}"></script>
 
+    <!-- share button -->
+    <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c9658fb6f05b20011c6d5cf&product=inline-share-buttons' async='async'></script>
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132756512-1"></script>
