--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -24,6 +24,9 @@
                                             <h3>{{ item.title }}</h3>
                                         </a>
                                        
+                                        <!-- Go to www.addthis.com/dashboard to customize your tools -->
+                                        <div class="addthis_inline_share_toolbox"></div>
+            
                                         <div class="post-meta">
                                             <p class="post-author">By {{ item.author }}</p>
                                             <p class="post-excerp">{{ item.description|truncatewords:180 }}</p>
