share button update

--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -52,6 +52,8 @@
                                             <a href="{{ item.get_absolute_url }}" class="post-title">
                                                 <h6>{{ item.title }}</h6>
                                             </a>
+                                             <!-- Go to www.addthis.com/dashboard to customize your tools -->
+                                            <div class="addthis_inline_share_toolbox"></div>
                                             <!-- Post Like & Post Comment -->
                                             <p class="post-date"><span>{{ item.date }}</span></p>
                                         </div>
