--- a/lokswar/templates/base.html
+++ b/lokswar/templates/base.html
@@ -379,9 +379,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!-- Active js -->
     <script src="{% static 'js/active.js' %}"></script>
 
-   
-    <!-- Go to www.addthis.com/dashboard to customize your tools -->
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c967437017a166f"></script>
+    <!-- BEGIN SHAREAHOLIC CODE -->
+    <link rel='preload' href='https://apps.shareaholic.com/assets/pub/shareaholic.js' as='script' />
+    <script data-cfasync="false" async src="https://apps.shareaholic.com/assets/pub/shareaholic.js" data-shr-siteid="9a2ac1c955ac208a20641d76234dd399"></script>
+    <!-- END SHAREAHOLIC CODE -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132756512-1"></script>
