--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -23,7 +23,13 @@
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
                                             <h3>{{ item.title }}</h3>
                                         </a>
-                                       
+                                       <!-- AddToAny BEGIN -->
+                                        <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                                            <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+                                            <a class="a2a_button_facebook"></a>
+                                            <a class="a2a_button_twitter"></a>
+                                            <a class="a2a_button_whatsapp"></a>
+                                            </div>
                                 
             
                                         <div class="post-meta">
