share buttons update all

--- a/lokswar/home/templates/detail.html
+++ b/lokswar/home/templates/detail.html
@@ -43,6 +43,13 @@
                                         <a href="{{ get_absolute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_25 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>                             
                                         <p>{{ item.date }}</p>
                                     </div>
                                 </div>
@@ -69,6 +76,13 @@
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>                                                                                            
                                         <p class="post-date">{{ item.date }}</p>
                                     </div>
                                 </div>
@@ -85,8 +99,15 @@
                                     <a href="{% url 'home:politics' %}" class="post-catagory">राजनीति </a>
                                     <div class="post-meta">
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
-                                            <h6>Sed a elit euismod augue semper congue sit amet ac sapien.</h6>
+                                            <h6>{{ item.title }}</h6>
                                         </a>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>                                                                    
                                         <p>{{ item.date }}</p>
                                     </div>
                                 </div>
@@ -105,6 +126,13 @@
                                         <a href="{{ item.get_absloute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>                                                                     
                                         <p>{{ item.date }}</p>
                                     </div>
                                 </div>
@@ -122,7 +150,14 @@
                                         <a href="{{ item.get_absloute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
-                                        <p>{{ item.title }}</p>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>                                                                
+                                        <p>{{ item.date }}</p>
                                     </div>
                                 </div>
                             </div>
@@ -140,7 +175,14 @@
                                         <a href="{{ item.get_absloute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
-                                        <p>{{ item.title }}</p>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>                                                                     
+                                        <p>{{ item.date }}</p>
                                     </div>
                                 </div>
                             </div>
@@ -158,6 +200,13 @@
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>                                                                    
                                         <p>{{ item.date }}</p>
                                     </div>
                                 </div>
