--- a/lokswar/home/templates/home/top_detail.html
+++ b/lokswar/home/templates/home/top_detail.html
@@ -7,7 +7,13 @@
     <div class="post-data">
    
             <h3>{{ detail.title }}</h3>
-
+            <!-- AddToAny BEGIN -->
+            <div class="a2a_kit a2a_kit_size_25 a2a_default_style">
+            <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+            <a class="a2a_button_facebook"></a>
+            <a class="a2a_button_twitter"></a>
+            <a class="a2a_button_whatsapp"></a>
+            </div>           
         <div class="post-meta">
             <p class="post-author">By <a href="#">{{ detail.author }}</a></p>
             <p>{{ detail.description }}</p>
