--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -24,17 +24,18 @@
                                             <h3>{{ item.title }}</h3>
                                         </a>
                                        <!-- AddToAny BEGIN -->
-                                        <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-                                            <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+                                        <div class="a2a_kit a2a_kit_size_25 a2a_default_style">
+                                            <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
                                             <a class="a2a_button_facebook"></a>
                                             <a class="a2a_button_twitter"></a>
                                             <a class="a2a_button_whatsapp"></a>
                                             </div>
+
                                 
             
                                         <div class="post-meta">
                                             <p class="post-author">By {{ item.author }}</p>
-                                            <p class="post-excerp">{{ item.description|truncatewords:180 }}</p>
+                                            <p class="post-excerp">{{ item.description|linebreaks|truncatewords:180 }}</p>
                                             <!-- Post Like & Post Comment -->
                                             <p class="post-date"><span>{{ item.date }}</span></p>
                                         </div>
@@ -57,7 +58,13 @@
                                             <a href="{{ item.get_absolute_url }}" class="post-title">
                                                 <h6>{{ item.title }}</h6>
                                             </a>
-                                  
+                                              <!-- AddToAny BEGIN -->
+                                        <div class="a2a_kit a2a_kit_size_20 a2a_default_style">
+                                            <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                            <a class="a2a_button_facebook"></a>
+                                            <a class="a2a_button_twitter"></a>
+                                            <a class="a2a_button_whatsapp"></a>
+                                            </div>
                                             <!-- Post Like & Post Comment -->
                                             <p class="post-date"><span>{{ item.date }}</span></p>
                                         </div>
@@ -82,6 +89,13 @@
                                     <a href="{{ item.get_absolute_url }}" class="post-title">
                                         <h6>{{ item.title }}</h6>
                                     </a>
+                                      <!-- AddToAny BEGIN -->
+                                      <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>
                                     <p>{{ item.date }}</p>
                                 </div>
                             </div>
@@ -98,8 +112,15 @@
                                 <a href="{% url 'home:politics' %}" class="post-catagory">राजनीति </a>
                                 <div class="post-meta">
                                     <a href="{{ item.get_absolute_url }}" class="post-title">
-                                        <h6>Sed a elit euismod augue semper congue sit amet ac sapien.</h6>
+                                        <h6>{{ item.title }}</h6>
                                     </a>
+                                      <!-- AddToAny BEGIN -->
+                                      <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>
                                     <p>{{ item.date }}</p>
                                 </div>
                             </div>
@@ -118,6 +139,13 @@
                                     <a href="{{ item.get_absolute_url }}" class="post-title">
                                         <h6>{{ item.title }}</h6>
                                     </a>
+                                      <!-- AddToAny BEGIN -->
+                                      <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>
                                     <p>{{ item.date }}</p>
                                 </div>
                             </div>
@@ -136,6 +164,13 @@
                                     <a href="{{ item.get_absolute_url }}" class="post-title">
                                         <h6>{{ item.title }}</h6>
                                     </a>
+                                      <!-- AddToAny BEGIN -->
+                                      <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>
                                     <p>{{ item.date }}</p>
                                 </div>
                             </div>
@@ -153,6 +188,13 @@
                                     <a href="{{ item.get_absolute_url }}" class="post-title">
                                         <h6>{{ item.title }}</h6>
                                     </a>
+                                      <!-- AddToAny BEGIN -->
+                                      <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>
                                     <p>{{ item.date }}</p>
                                 </div>
                             </div>
@@ -170,6 +212,13 @@
                                     <a href="{{ item.get_absloute_url }}" class="post-title">
                                         <h6>{{ item.title }}</h6>
                                     </a>
+                                      <!-- AddToAny BEGIN -->
+                                      <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>
                                     <p>{{ item.date }}</p>
                                 </div>
                             </div>
@@ -207,6 +256,13 @@
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
+                                          <!-- AddToAny BEGIN -->
+                                          <div class="a2a_kit a2a_kit_size_20 a2a_default_style">
+                                            <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                            <a class="a2a_button_facebook"></a>
+                                            <a class="a2a_button_twitter"></a>
+                                            <a class="a2a_button_whatsapp"></a>
+                                            </div>
                                         <p>{{ item.date }}</p>
                                     </div>
                                 </div>
@@ -230,6 +286,7 @@
                                 <a href="{{ item.get_absolute_url }}">
                                     <h6><span></span><span></span>{{ item.title }}</h6>
                                 </a>
+                             
                                 <p>{{ item.date }}</p>
                             </div>
     
@@ -296,6 +353,13 @@
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
+                                          <!-- AddToAny BEGIN -->
+                                          <div class="a2a_kit a2a_kit_size_20 a2a_default_style">
+                                            <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                            <a class="a2a_button_facebook"></a>
+                                            <a class="a2a_button_twitter"></a>
+                                            <a class="a2a_button_whatsapp"></a>
+                                            </div>
                                         <p>{{ item.date }}</p>
                                     </div>
                                 </div>
@@ -324,6 +388,13 @@
                                 <a href="{{ item.get_absolute_url }}" class="post-title">
                                     <h6>{{ item.title }}</h6>
                                 </a>
+                                  <!-- AddToAny BEGIN -->
+                                  <div class="a2a_kit a2a_kit_size_20 a2a_default_style">
+                                    <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                    <a class="a2a_button_facebook"></a>
+                                    <a class="a2a_button_twitter"></a>
+                                    <a class="a2a_button_whatsapp"></a>
+                                    </div>
                                 <div class="post-meta">
                                     {{ item.date }}
                                 </div>
