--- a/lokswar/home/templates/category_list/news_category_list.html
+++ b/lokswar/home/templates/category_list/news_category_list.html
@@ -21,9 +21,16 @@
                                 <a href="{{ item.get_absolute_url }}" class="post-title">
                                     <h3>{{ item.title }}</h3>
                                 </a>
+                                <!-- AddToAny BEGIN -->
+                                <div class="a2a_kit a2a_kit_size_25 a2a_default_style">
+                                <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                <a class="a2a_button_facebook"></a>
+                                <a class="a2a_button_twitter"></a>
+                                <a class="a2a_button_whatsapp"></a>
+                                </div>
                                 <div class="post-meta">
-                                    <p class="post-author">By <a href="#">{{ item.author }}</a></p>
-                                    <p class="post-excerp">{{ item.description }}</p>
+                                    <p class="post-author">By {{ item.author }}</p>
+                                    <p class="post-excerp">{{ item.description|linebreaks|truncatewords:150 }}</p>
                                     <!-- Post Like & Post Comment -->
                                     <p>{{ item.date }}</p>
                                 </div>
@@ -79,6 +86,13 @@
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
+                                <!-- AddToAny BEGIN -->
+                                <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                    <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                    <a class="a2a_button_facebook"></a>
+                                    <a class="a2a_button_twitter"></a>
+                                    <a class="a2a_button_whatsapp"></a>
+                                    </div>
                                         <p class="post-date">{{ item.date }}</p>
                                     </div>
                                 </div>
@@ -95,8 +109,15 @@
                                     <a href="{% url 'home:politics' %}" class="post-catagory">राजनीति </a>
                                     <div class="post-meta">
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
-                                            <h6>Sed a elit euismod augue semper congue sit amet ac sapien.</h6>
+                                            <h6>{{ item.title }}</h6>
                                         </a>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>
                                         <p>{{ item.date }}</p>
                                     </div>
                                 </div>
@@ -115,6 +136,13 @@
                                         <a href="{{ item.get_absloute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>                                        
                                         <p>{{ item.date }}</p>
                                     </div>
                                 </div>
@@ -132,6 +160,13 @@
                                         <a href="{{ item.get_absloute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>                                    
                                         <p>{{ item.title }}</p>
                                     </div>
                                 </div>
@@ -150,6 +185,13 @@
                                         <a href="{{ item.get_absloute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>       
                                         <p>{{ item.title }}</p>
                                     </div>
                                 </div>
@@ -168,6 +210,13 @@
                                         <a href="{{ item.get_absolute_url }}" class="post-title">
                                             <h6>{{ item.title }}</h6>
                                         </a>
+                                    <!-- AddToAny BEGIN -->
+                                    <div class="a2a_kit a2a_kit_size_16 a2a_default_style">
+                                        <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_whatsapp"></a>
+                                        </div>                                    
                                         <p>{{ item.date }}</p>
                                     </div>
                                 </div>
@@ -184,6 +233,7 @@
                                 <a href="{{ item.get_absolute_url }}">
                                     <h6><span></span><span></span>{{ item.title }}</h6>
                                 </a>
+                                                   
                                 <p>{{ item.date }}</p>
                             </div>
     
