--- a/lokswar/home/templates/home/news_detail.html
+++ b/lokswar/home/templates/home/news_detail.html
@@ -6,9 +6,16 @@
     </div>
     <div class="post-data">
             <h3 class="post-title"> {{ detail2.title }}</h3>
+            <!-- AddToAny BEGIN -->
+            <div class="a2a_kit a2a_kit_size_25 a2a_default_style">
+                <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
+                <a class="a2a_button_facebook"></a>
+                <a class="a2a_button_twitter"></a>
+                <a class="a2a_button_whatsapp"></a>
+                </div>             
         <div class="post-meta">
             <p class="post-author">By <a href="#">{{ detail2.author }}</a></p>
-            <p>{{ detail2.description }}</p>
+            <p>{{ detail2.description|linebreaks|force_escape }}</p>
             <p>{{ detail2.date }}</p>
 
             
