--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -29,6 +29,8 @@
                                             <a class="a2a_button_facebook"></a>
                                             <a class="a2a_button_twitter"></a>
                                             <a class="a2a_button_whatsapp"></a>
+                                            <a class="a2a_button_youtube" data-a2a-follow="YouTube"></a>
+                                            <a class="a2a_button_youtube_channel" data-a2a-follow="UCF0pVplsI8R5kcAqgtoRqoA"></a>
                                             </div>
 
                                 
