--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -24,13 +24,15 @@
                                             <h3>{{ item.title }}</h3>
                                         </a>
                                        <!-- AddToAny BEGIN -->
-                                        <div class="a2a_kit a2a_kit_size_25 a2a_default_style">
+                                        <div class="a2a_kit a2a_kit_size_25 a2a_default_style a2a_follow">
                                             <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
                                             <a class="a2a_button_facebook"></a>
                                             <a class="a2a_button_twitter"></a>
                                             <a class="a2a_button_whatsapp"></a>
                                             <a class="a2a_button_youtube" data-a2a-follow="The lokswar"></a>
-                                            <a class="a2a_button_youtube_channel" data-a2a-follow="The lokswar"></a>
+                                            <a class="a2a_button_youtube_channel" data-a2a-follow="the+lokswar"></a>
+
+
                                             </div>
 
                                 
