--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -28,15 +28,13 @@
                                             <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
                                             <a class="a2a_button_facebook"></a>
                                             <a class="a2a_button_twitter"></a>
+                                            <a class="a2a_button_instagram" data-a2a-follow="thelokswar"></a>
                                             <a class="a2a_button_whatsapp"></a>
-                                            <a class="a2a_button_youtube" data-a2a-follow="The lokswar"></a>
-                                            <a class="a2a_button_youtube_channel" data-a2a-follow="the+lokswar"></a>
-
+                                            <a class="a2a_button_youtube_channel" data-a2a-follow="UCgKA-AIu4l0_4c4jklABAHw"></a>
+ 
 
                                             </div>
 
-                                
-            
                                         <div class="post-meta">
                                             <p class="post-author">By {{ item.author }}</p>
                                             <p class="post-excerp">{{ item.description|linebreaks|truncatewords:180 }}</p>
