--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -24,16 +24,23 @@
                                             <h3>{{ item.title }}</h3>
                                         </a>
                                        <!-- AddToAny BEGIN -->
-                                        <div class="a2a_kit a2a_kit_size_25 a2a_default_style a2a_follow">
+                                       
+                                        <div class="a2a_kit a2a_kit_size_25 a2a_default_style">
                                             <!-- <a class="a2a_dd" href="https://www.addtoany.com/share"></a> -->
                                             <a class="a2a_button_facebook"></a>
                                             <a class="a2a_button_twitter"></a>
-                                            <a class="a2a_button_instagram" data-a2a-follow="thelokswar"></a>
                                             <a class="a2a_button_whatsapp"></a>
-                                            <a class="a2a_button_youtube_channel" data-a2a-follow="UCgKA-AIu4l0_4c4jklABAHw"></a>
  
-
                                             </div>
+                                            <br>
+                                            <div class="a2a_kit a2a_kit_size_25 a2a_default_style a2a_follow">
+                                                
+                                                <a class="a2a_button_instagram" data-a2a-follow="thelokswar"></a>
+                                                <a class="a2a_button_youtube_channel" data-a2a-follow="UCF0pVplsI8R5kcAqgtoRqoA"></a>
+                                                
+                                            </div>
+                                            
+                                         
 
                                         <div class="post-meta">
                                             <p class="post-author">By {{ item.author }}</p>
