--- a/lokswar/home/templates/home/news_detail.html
+++ b/lokswar/home/templates/home/news_detail.html
@@ -15,7 +15,7 @@
                 </div>             
         <div class="post-meta">
             <p class="post-author">By <a href="#">{{ detail2.author }}</a></p>
-            <p>{{ detail2.description|linebreaks|force_escape }}</p>
+            {{ detail2.description|linebreaks|force_escape }}
             <p>{{ detail2.date }}</p>
 
             
