--- a/lokswar/templates/base.html
+++ b/lokswar/templates/base.html
@@ -359,7 +359,7 @@
                     <div class="col-12">
                         <!-- Copywrite -->
                         <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This Website is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.linkedin.com/in/amresh-kumar-35b604168/" target="_blank">AmreshK005</a>
+<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This Website is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.linkedin.com/in/amresh-kumar-35b604168/" target="_blank">AmreshK005</a> -->
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                     </div>
                 </div>
