--- a/lokswar/home/templates/home_list.html
+++ b/lokswar/home/templates/home_list.html
@@ -216,9 +216,9 @@
                                 <a href="{{ item.get_absolute_url }}"><img style="height:90px;" src="{{ item.image.url }}" alt=""></a>
                             </div>
                             <div class="post-data">
-                                <a href="{% url 'home:business' %}" class="post-catagory">व्यापार </a>
+                                <a href="{% url 'home:election' %}" class="post-catagory">व्यापार </a>
                                 <div class="post-meta">
-                                    <a href="{{ item.get_absloute_url }}" class="post-title">
+                                    <a href="{{ item.get_absolute_url }}" class="post-title">
                                         <h6>{{ item.title }}</h6>
                                     </a>
                                       <!-- AddToAny BEGIN -->
