--- a/lokswar/home/templates/category_list/news_category_list.html
+++ b/lokswar/home/templates/category_list/news_category_list.html
@@ -8,7 +8,7 @@
                 <div class="col-12 col-lg-8">
                     <div class="blog-posts-area">
 
-                        {% for item in news_list %}
+                        {% for item in news_list reversed %}
                         <!-- Single Featured Post -->
                         <div class="single-blog-post featured-post mb-30">
                             <div class="post-thumb">
